# stage3

./: LICENSE  MANIFEST.in  README.md  phmodel.txt  setup.py  stage3_tutorial_jp.ipynb
docs/: CMakeLists.txt  conf.py.in  dependencies.rst  index.rst  introduction.rst  source.rst  usage.rst
example/: stage3.sh
example/inputs/: input.yml
example/mdp_ffamber/: em.mdp  ie.mdp  npt_eq.mdp  npt_prod.mdp  nvt_eq.mdp
smarts_atom_types/: opls.par
stage3/: CgenffForceFieldPlugin.py  ChargePlugin.py  ForceFieldPlugin.py  GaffForceFieldPlugin.py  GamessChargePlugin.py  GaussianChargePlugin.py  OplsForceFieldPlugin.py  __init__.py  __main__.py  charmm2gromacs-pvm.py  charmm2gromacs.py  config.py  polarizability_costs.py  stage.py  stage3.py  tests.py  util.py  xvg2yavg.py
stage3/forcefields/amber99sb-ildn.ff/: atomtypes.atp  ffnonbonded.itp  opc.itp  tip3p-m25.itp  tip3p-mod.itp
stage3/forcefields/charmm27.ff/: atomtypes.atp  ffnonbonded.itp  opc.itp  tip3p-m25.itp  tip3p-mod.itp  tip4pew.itp
stage3/forcefields/oplsaa.ff/: atomtypes.atp  atomtypes.atp~  ffnonbonded.itp~  opc.itp  tip3p-m25.itp  tip3p-mod.itp  tip4pew.itp
stage3/molScripts/: forcefield.py  molecule.py
stage3/plugins/: AmsolChargePlugin.py  CgenffForceFieldPlugin.py  GaffForceFieldPlugin.py  GamessChargePlugin.py  GaussianChargePlugin.py  OplsForceFieldPlugin.py
stage3/templates/: gamess_charge.inp  gamess_gas_dipole.inp  gamess_gas_optimize.inp  gaussian_charge.com  genion_template.mdp  md.mdp  npt.mdp  premin_template.mdp
templates/: gamess_gas_dipole_mp2.inp  nvt.mdp
tests/ethanol-water_am1bcc/: ethanol.mol  input.yml  rungmx.sh  stage.sh  stage3.sh
tests/ethanol_am1bcc/: input.yml  stage.sh  stage3.sh
tests/protein-ligand_am1bcc/: protein-ligand.sh  protein-ligand_md.sh  rungmx.sh  stage.sh
tests/protein-ligand_am1bcc/mdp/: ie.mdp  md.mdp  npt.mdp  nvt.mdp
tests/protein-ligand_amber99sbildn-gaff_am1bcc/: input.yml  jz4.mol  protein-ligand_md.sh  stage.sh  stage3.sh
tests/protein-ligand_amber99sbildn-gaff_am1bcc/mdp/: em.mdp  ie.mdp  md.mdp  npt.mdp  nvt.mdp
tests/protein-ligand_charmm27-cgenff/: protein-ligand_md.sh  stage.sh
tests/protein-ligand_charmm27-cgenff/mdp/: ie.mdp  md.mdp  npt.mdp  nvt.mdp
